examples/test/testpolicy8068.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8068
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key20: value46
      key0: value48
      key38: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value18
          key12: value18
          key5: value30
      podSelector:
        matchLabels:
          key2: value2
          key19: value10
